Fix YAML syntax for GitHub Actions workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-      - name: "23f1002440@ds.study.iitm.ac.in"
-         run: echo "Hello, world!"
+      - name: 23f1002440@ds.study.iitm.ac.in
+        run: echo "Hello, world!"
