--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,19 @@ jobs:
     steps:
       - name: 23f1002440@ds.study.iitm.ac.in
         run: echo "Hello, world!"
+  cache-job:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Cache pip dependencies
+        id: cache-pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: cache-1e310a2
+
+      - name: Prime cache-1e310a2
+        run: 'echo "Cache hit: ${{ steps.cache-pip.outputs.cache-hit }}"'
