Modify fastapi installation to use cache
Change pip install command to allow caching.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -8,4 +8,4 @@ RUN apt-get update && \
     python --version
 
 # Install required Python package fastapi globally
-RUN python -m pip install --no-cache-dir fastapi
+RUN python -m pip install fastapi
